Introduces NPM and Webpack for JS builds, and adds a bit of organization.
This feature isn't done. Right now I have things set up to commit the compiled
JS bundles. I'm still figuring out how I want to organize this project, so I'll
come back to it.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 .DS_Store
+node_modules
 # The build site for preview
 site-build
 # The copied content for site, original contents are in master/develop branch
