--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,8 @@
 .DS_Store
 node_modules
+dist
+.sass-cache
+.stage
 
 # The root for site's documentation content. ie. One of the MDC repos.
 docs-src
-
-# The build site for preview
-site-build
-
-# The copied content for site, original contents are in master/develop branch
-jekyll-site-src/apidocs
-jekyll-site-src/components
-jekyll-site-src/contributing
-jekyll-site-src/howto
-jekyll-site-src/index.md
-jekyll-site-src/.sass-cache
