--- a/package.json
+++ b/package.json
@@ -27,6 +27,11 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
+    "chalk": "^1.1.3",
+    "fs-extra": "^2.1.2",
+    "glob": "^7.1.1",
+    "meow": "^3.7.0",
+    "vinyl": "^2.0.1",
     "webpack": "^2.2.1"
   }
 }
