--- a/package.json
+++ b/package.json
@@ -23,14 +23,20 @@
     "material-components-web": "^0.6.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.7",
     "babel-core": "^6.24.0",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
     "chalk": "^1.1.3",
+    "css-loader": "^0.27.3",
+    "extract-text-webpack-plugin": "^2.1.0",
     "fs-extra": "^2.1.2",
     "glob": "^7.1.1",
     "meow": "^3.7.0",
+    "node-sass": "^4.5.1",
+    "postcss-loader": "^1.3.3",
+    "sass-loader": "^6.0.3",
     "vinyl": "^2.0.1",
     "webpack": "^2.2.1"
   }
