--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "extract-text-webpack-plugin": "^2.1.0",
     "fs-extra": "^2.1.2",
     "glob": "^7.1.1",
+    "js-yaml": "^3.8.2",
     "meow": "^3.7.0",
     "node-sass": "^4.5.1",
     "postcss-loader": "^1.3.3",
