--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "dependencies": {
     "codemirror": "^5.25.0",
-    "material-components-web": "^0.6.0"
+    "material-components-web": "^0.6.0",
+    "reset-css": "^2.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
@@ -37,7 +38,6 @@
     "glob": "^7.1.1",
     "js-yaml": "^3.8.2",
     "meow": "^3.7.0",
-    "merge-files-webpack-plugin": "^1.1.2",
     "node-sass": "^4.5.1",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
