--- a/scripts/build
+++ b/scripts/build
@@ -1,32 +1,22 @@
 #!/usr/bin/env node
 
 const assert = require('assert');
-const chalk = require('chalk');
 const fs = require('fs-extra');
 const path = require('path');
 const reporter = require('./lib/reporter');
 const webpack = require('webpack');
-const { BuildDir } = require('./lib/conf');
+const { BuildDir, FilePattern } = require('./lib/conf');
 const { JekyllFile } = require('./lib/file');
+const { addWatchToWebpackConfig, setupFileWatches } = require('./lib/watch');
 const { execSync } = require('child_process');
+const { initCli } = require('./lib/cli');
+const { processJekyllFile, processSupplementaryDirectory } = require('./lib/processors');
 const { sync: globSync } = require('glob');
 
 
-// Validate input
-const args = process.argv.slice(2);
-if (args.length == 0) {
-  console.error('Missing path to components repo.\n' +
-                'Usage: script/build path/to/mdc/repo');
-  process.exit(1);
-}
-
-const basePath = args[0];
-const basePathStat = fs.lstatSync(basePath);
-if (!basePathStat.isDirectory()) {
-  console.error('Path argument must point to a directory.\n' +
-                'Usage: script/build path/to/mdc/repo');
-  process.exit(1);
-}
+// Parse and validate command line arguments.
+const cli = initCli();
+const docsRepoPath = cli.input[0];
 
 // Ensure that the working directory is the project root
 const projectRootPath = path.join(__dirname, '..');
@@ -50,7 +40,6 @@ reporter.step('Cleaning...', () => {
     fs.removeSync(BuildDir.STAGE);
     fs.removeSync(BuildDir.DIST);
   } catch(e) {
-    console.error(chalk.red('Something went wrong'));
     console.error(e);
     process.exit(1);
   }
@@ -58,46 +47,30 @@ reporter.step('Cleaning...', () => {
 
 fs.copySync(BuildDir.JEKYLL, BuildDir.STAGE);
 
-const jekyllMarkdownFiles =
-    reporter.step('Finding Jekyll markdown...', () => {
-      const markdownFiles = globSync(path.join(basePath, '**/*.md'))
-          .map((filePath) => JekyllFile.readFromPath(filePath, basePath))
-      return markdownFiles.filter((file) => file.isValidJekyll);
-    });
-
-reporter.step('Liquifying...', () => {
-  jekyllMarkdownFiles.forEach((file) => file.uncommentHiddenCode());
+reporter.step('Processing Jekyll files...', () => {
+  const files = globSync(path.join(docsRepoPath, FilePattern.JEKYLL_FILES))
+      .map((filePath) => JekyllFile.readFromPath(filePath, docsRepoPath))
+  files.forEach(processJekyllFile);
 });
 
-reporter.step('Creating indexes...', () => {
-  jekyllMarkdownFiles.forEach((file) => {
-    if (file.shouldBecomeIndex) {
-      file.basename = 'index.md';
-    }
-  });
-});
-
-reporter.step('Copying files...', () => {
-  jekyllMarkdownFiles.forEach((file) => {
-    file.path = path.resolve(BuildDir.STAGE, file.relative);
-    file.basedir = BuildDir.STAGE;
-    file.write();
-  });
-
-  globSync(path.join(basePath, '**/docs/'))
-      .forEach((docsDirPath) => {
-        const relativePath = path.relative(basePath, docsDirPath);
-        const newPath = path.resolve(BuildDir.STAGE, relativePath);
-        fs.ensureDirSync(newPath);
-        fs.copySync(docsDirPath, newPath);
-      });
+reporter.step('Copying supplementary directories...', () => {
+  const docsDirectoryPaths = globSync(
+      path.join(docsRepoPath, FilePattern.SUPPLEMENTARY_DIRECTORIES));
+  docsDirectoryPaths.forEach((docsDirPath) =>
+      processSupplementaryDirectory(docsRepoPath, docsDirPath));
 });
 
 reporter.step('Building assets...', () => {
   // TODO(shyndman): Periodically check if we can uncomment this. There's some
   // noisy deprecation deep in Webpack.
   process.noDeprecation = true;
-  webpack(require('../webpack.config'), (err, stats) => {
+
+  const webpackConfig = require('../webpack.config');
+  if (cli.flags.watch) {
+    addWatchToWebpackConfig(webpackConfig);
+  }
+
+  webpack(webpackConfig, (err, stats) => {
     reporter.webpackStats(stats);
 
     if (err) {
@@ -107,11 +80,11 @@ reporter.step('Building assets...', () => {
       process.exit(1);
     }
 
-    finishBuild();
+    buildJekyll();
   });
 }, { noCheck: true });
 
-function finishBuild() {
+function buildJekyll() {
   reporter.step('Building Jekyll site...', () => {
     const jekyllEnv = Object.assign({}, process.env, {
       BUNDLE_GEMFILE: path.join(projectRootPath, 'GEMFILE'),
@@ -126,5 +99,15 @@ function finishBuild() {
       });
   }, { noCheck: true });
 
-  reporter.complete();
+  if (!cli.flags.watch) {
+    reporter.complete();
+  }
+}
+
+if (cli.flags.watch) {
+  setupFileWatches((filePath) => {
+    const newFilePath = filePath.replace(BuildDir.JEKYLL, BuildDir.STAGE);
+    fs.ensureDirSync(path.dirname(newFilePath));
+    fs.copySync(filePath, newFilePath);
+  });
 }
