Stops Jekyll from printing its stdout.
Stderr is still allowed through.

--- a/scripts/build
+++ b/scripts/build
@@ -83,9 +83,9 @@ function buildJekyll() {
         --config ${path.join(BuildDir.STAGE, '_config.yml')}`,
       {
         env: jekyllEnv,
-        stdio: 'inherit',
+        stdio: ['ignore', 'ignore', 'inherit'],
       });
-  }, { noCheck: true });
+  });
 
   if (!cli.flags.watch) {
     reporter.complete();
