--- a/jekyll-site-src/_config.yml
+++ b/jekyll-site-src/_config.yml
@@ -1,15 +1,8 @@
-title: Material Components for iOS
-description: > # this means to ignore newlines
-  Material Components for iOS is a set of user interface components that help iOS app developers build apps with material design.
-basepath: "" # blank if hosted at site root, /subdirectory if hosted in "subdirectory" folder
-# temporarily disabled
-# url: "http://www.materialcomponents.org"
-url: ""
-folder: ""
-permalink: :title
-analytics_id: "UA-51798601-9"
-link_to_site: "false"
+# Global Jekyll configuration. More specific configuration is contained within
+# a site's .mdc-docs.yaml file, which are used to generate Jekyll scopes.
 
+analytics_id: UA-90255304-1
+link_to_site: false
 
 # Plugins
 gems: [jekyll-tidy]
@@ -23,47 +16,3 @@ kramdown:
   # highlighted in javascript with CodeMirror.
   syntax_highlighter: none
   auto_ids: true
-
-#kramdown:
-#  #parse_block_html: true
-#  syntax_highlighter: rouge
-#  syntax_highlighter_opts:
-#    tab_width: 4
-#    line_numbers: true
-#    css: style
-
-# Build target
-exclude:
-  - build.sh
-
-defaults:
-#layout specification
-- scope:
-    path: ''
-  values:
-    layout: detail
-# - scope:
-#     path: index
-#   value:
-#     layout: homepage
-# - scope:
-#     path: howto/index
-#   values:
-#     layout: landing
-# - scope:
-#     path: components/index
-#   values:
-#     layout: landing
-#category specification
-- scope:
-    path: howto
-  values:
-    categories: howto
-- scope:
-    path: components
-  values:
-    categories: components
-- scope:
-    path: contributing
-  values:
-    categories: contributing
