--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "dependencies": {
     "codemirror": "^5.25.0",
+    "deepcopy": "^0.6.3",
     "material-components-web": "^0.8.0",
     "reset-css": "^2.2.0"
   },
