Adds a dependency on lodash.

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "codemirror": "^5.25.0",
     "deepcopy": "^0.6.3",
+    "lodash": "^4.17.4",
     "material-components-web": "^0.8.0",
     "reset-css": "^2.2.0"
   },
