Adds a production Jekyll configuration.
Currently it only minifies HTML. It is included in the build if the
BUILD_ENV environment variable is set to 'production' while invoking
script/build.

--- a/scripts/build
+++ b/scripts/build
@@ -75,13 +75,18 @@ function buildJekyll() {
     // Write out the merged config.
     config.write(path.join(BuildDir.STAGE, JEKYLL_CONFIG_PATH));
 
+    const configPaths = [path.join(BuildDir.STAGE, '_config.yml')];
+    if (cli.buildEnvironment == 'production') {
+      configPaths.push(path.join(BuildDir.STAGE, '_prod-config.yml'));
+    }
+
     const jekyllEnv = Object.assign({}, process.env, {
       BUNDLE_GEMFILE: path.join(projectRootPath, 'GEMFILE'),
     });
     execSync(`bundle exec jekyll build \
         --source ${BuildDir.STAGE} \
         --destination ${BuildDir.DIST} \
-        --config ${path.join(BuildDir.STAGE, '_config.yml')}`,
+        --config ${configPaths.join(',')}`,
       {
         env: jekyllEnv,
         stdio: ['ignore', 'ignore', 'inherit'],
