--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "license": "Apache-2.0",
   "version": "1.0.0",
   "scripts": {
-    "build": "BUILD_ENV=production webpack --progress --colors",
-    "dev": "BUILD_ENV=development webpack --progress --colors --watch"
+    "test": "mocha --reporter dot --ui qunit test/**.js"
   },
   "babel": {
     "presets": [
@@ -31,6 +30,7 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-object-assign": "^6.22.0",
     "babel-preset-es2015": "^6.24.0",
+    "chai": "^3.5.0",
     "chalk": "^1.1.3",
     "chokidar": "^1.6.1",
     "css-loader": "^0.27.3",
@@ -39,6 +39,7 @@
     "glob": "^7.1.1",
     "js-yaml": "^3.8.2",
     "meow": "^3.7.0",
+    "mocha": "^3.3.0",
     "node-sass": "^4.5.1",
     "postcss-loader": "^1.3.3",
     "sass-loader": "^6.0.3",
