--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "fs-extra": "^3.0.0",
     "glob": "^7.1.1",
     "js-yaml": "^3.8.2",
+    "md5-file": "^3.1.1",
     "meow": "^3.7.0",
     "mocha": "^3.3.0",
     "mock-fs": "^4.3.0",
