Fail builds on broken links.
* Changed handling of unknown links from ignoring to failing.
* Excludes code blocks during link processing. This allows arbitrary URLs to exist in example code without issue.
* Added UUIDs to link and code template variables to avoid collisions with user-supplied variables.
* Added styled reporting of broken links.

--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "codemirror": "^5.25.0",
     "lodash": "^4.17.4",
     "material-components-web": "^0.8.0",
-    "reset-css": "^2.2.0"
+    "reset-css": "^2.2.0",
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.7",
